solved scroll problem due to navbar, resolved unnecessary overflow caused in parent

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 
     --overlay-height: 85vh;
     --overlay-width: 85vw;
+    --inner-responsive-page-height: 75vh;
 }
 @font-face {
   font-family: Valorant;
@@ -20,7 +21,7 @@
 }
 body {
     background-color: var(--black);
-    position: static;
+    position: fixed;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -38,6 +39,12 @@ body {
     border-radius: 10px;
     overflow-x: hidden;
 }
+.inner-responsive-page {
+    height: var(--inner-responsive-page-height);
+}
+
+
+
 /* buttons */
 .btn {
     /* Clean style */
@@ -183,9 +190,6 @@ body {
     --button-bits-color-hover: #ece8e1;
   }
   /* end of buttons */
-.inner-responsive-page {
-    height: var(--overlay-height);
-}
 
 
 .logo{
@@ -216,7 +220,6 @@ body {
 .nav-item .nav-link:hover{
     border-bottom: 2px solid #FD4556;
     width: 100%;
-
 }
 .navbar-toggler{
   border:1px solid var(--red);
@@ -229,13 +232,13 @@ body {
 
 h1 {
     text-align: center;
-  }
+}
   
 .stats {
     margin-top: 10vh;
     display: flex;
     justify-content: space-around;
-  }
+}
 
 .stat {
     font-size: 1.2em;
@@ -256,7 +259,7 @@ h1 {
 } */
 
 .number:hover, .term:hover {
-     text-shadow: 0 0 10px #FD4556;
+    text-shadow: 0 0 10px #FD4556;
 }
 
 /* SVGs */
@@ -353,10 +356,9 @@ h2 {
   margin: 0 auto;
   font-family: Valorant;
 }
-/* !navbar */
-.navbar{
-    background: #171717;
-}
+
+/* ! discontinued navbar */
+
 /* .nav-item .nav-link{
     text-decoration: none;
     text-transform: uppercase;
@@ -376,128 +378,3 @@ h2 {
 } */
 
 
-.header {
-    background-color: #fff;
-    box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-    position: fixed;
-    width: 100%;
-    z-index: 3;
-}
-  
-.header ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    overflow: hidden;
-    background-color: #fff;
-}
-  
-.header li a {
-    display: block;
-    padding: 20px 20px;
-    border-right: 1px solid #f4f4f4;
-    text-decoration: none;
-}
-  
-.header li a:hover,
-.header .menu-btn:hover {
-    background-color: #f4f4f4;
-}
-  
-.header .logo {
-    display: block;
-    float: left;
-    font-size: 2em;
-    padding: 10px 20px;
-    text-decoration: none;
-}
-  
-/* menu */  
-.header .menu {
-    clear: both;
-    max-height: 0;
-    transition: max-height .2s ease-out;
-}
-  
-/* menu icon */  
-.header .menu-icon {
-    cursor: pointer;
-    float: right;
-    padding: 28px 20px;
-    position: relative;
-    user-select: none;
-}
-  
-.header .menu-icon .navicon {
-    background: #333;
-    display: block;
-    height: 2px;
-    position: relative;
-    transition: background .2s ease-out;
-    width: 18px;
-}
-  
-.header .menu-icon .navicon:before,
-.header .menu-icon .navicon:after {
-    background: #333;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
-}
-  
-.header .menu-icon .navicon:before {
-    top: 5px;
-}
-  
-.header .menu-icon .navicon:after {
-    top: -5px;
-}
-  
-/* menu btn */
-.header .menu-btn {
-    display: none;
-}
-.header .menu-btn:checked ~ .menu {
-    max-height: 460px;
-}
-  
-.header .menu-btn:checked ~ .menu-icon .navicon {
-    background: transparent;
-}
-  
-.header .menu-btn:checked ~ .menu-icon .navicon:before {
-    transform: rotate(-45deg);
-}
-  
-.header .menu-btn:checked ~ .menu-icon .navicon:after {
-    transform: rotate(45deg);
-}
-  
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-    top: 0;
-}
-  
-/* 48em = 768px */  
-@media (min-width: 48em) {
-    .header li {
-      float: left;
-    }
-    .header li a {
-      padding: 20px 30px;
-    }
-    .header .menu {
-      clear: none;
-      float: right;
-      max-height: none;
-    }
-    .header .menu-icon {
-      display: none;
-    }
-}
-  
-
-/* ! end navbar */
